[package]
name = "signmedia"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
byteorder = "1.5"
wasm-bindgen = "0.2.108"
img_hash = "3.2.0"
ark-groth16 = "0.5.0"
ark-bn254 = "0.5.0"
ark-relations = "0.5.1"
ark-std = "0.5.0"
ark-ff = "0.5.0"
ark-snark = "0.5.1"
